# videoStreaming

./: gstreamer_pipeline_commands.txt
gstreamer-dev/application/gstDeviceYarp/: gstreamerYarpClient  gstreamerYarpClient.c
gstreamer-dev/application/hello_word/: compilation_command.txt  helloworld  helloworld.c
gstreamer-dev/plugin/: CMakeLists.txt  install.sh  plugin.kdev4
gstreamer-dev/plugin/.kdev4/: gst-plugin.kdev4  plugin.kdev4
gstreamer-dev/plugin/src/: CMakeLists.txt  gstyarpdevice.c.bkp  gstyarpdevice.cpp  gstyarpdevice.h
